syntax = "proto3";
package pryzm.amm;

option go_package = "github.com/pryzm-finance/pryzm-core/x/amm/types";

message WeightUpdateTiming {
  uint64 pool_id = 1;
  int64 start_unix_millis = 2;
  int64 end_unix_millis = 3;
}
